--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
   </head>
-  <body data-no-debug="false">
-    <div class="news" data-no-handler="noHandler" data-no-url="https://www.kngf.nl/api/news" data-no-template="no-templates/news.html"></div>
+  <body data-no-debug="true">
+    <div class="news" data-no-handler="noHandler" data-no-url="https://www.kngf.nl/api/news" data-no-template="no-templates/news.html" data-no-data-handler="noJsonHandler"></div>
     <script src="js/site.build.js"></script>
   </body>
 </html>
