--- a/public/no-templates/news.html
+++ b/public/no-templates/news.html
@@ -1,4 +1,6 @@
 <h1>Nieuws</h1>
 <ul>
-  <li>Nieuws Item</li>
+  <%for(var index in this._result) {%>
+  <li><% this._result[index].publicationdate %> - <% this._result[index].title %></li>
+  <%}%>
 </ul>
