--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,16 @@
 
   </head>
   <body data-no-debug="true">
-    <div class="news" data-no-handler="noHandler" data-no-url="https://www.kngf.nl/api/news" data-no-template="no-templates/news.html" data-no-data-handler="noJsonHandler"></div>
+    <div class="news"
+         data-no-handler="noHandler"
+         data-no-url="https://www.kngf.nl/api/news"
+         data-no-template="no-templates/news.html"
+         data-no-data-handler="noJsonHandler"></div>
+
+
+
+
     <script src="js/site.build.js"></script>
+
   </body>
 </html>
